[project]
name = "openenv-support-env"
version = "0.1.0"
description = "OpenEnv Support Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_class = "env.environment:SupportEnv"
